{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 37,
  "lineage": "2e4fcc10-4ce1-c938-ba18-d293ebed3f0b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d3f444bc76de0a79",
            "arn": "arn:aws:ec2:ap-south-1:900871152231:instance/i-0aca0da7f9ec041ca",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aca0da7f9ec041ca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-060426bc8633fc853",
            "private_dns": "ip-172-31-11-223.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.11.223",
            "public_dns": "ec2-13-233-70-174.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.70.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-032bbbd85a123704c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "security group 1 using Terraform",
              "security group 2 using Terraform"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a137d9fe6d5ea8d3",
            "tags": {
              "Name": "exercise_0100",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "exercise_0100",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06cecb4a0096da6d3",
              "sg-0d9246bc8325ca8b0"
            ]
          },
          "dependencies": [
            "aws_security_group.sec_http",
            "aws_security_group.sec_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:900871152231:security-group/sg-0d9246bc8325ca8b0",
            "description": "security group 2 using Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9246bc8325ca8b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "security group 2 using Terraform",
            "name_prefix": "",
            "owner_id": "900871152231",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sec_http",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "sec_http",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0365ac2b87223e786"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:900871152231:security-group/sg-06cecb4a0096da6d3",
            "description": "security group 1 using Terraform",
            "egress": [],
            "id": "sg-06cecb4a0096da6d3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "security group 1 using Terraform",
            "name_prefix": "",
            "owner_id": "900871152231",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sec_ssh",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "sec_ssh",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0365ac2b87223e786"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}